# django-vanjs-demo

./: .gitignore  README.md
models/: pyproject.toml  random_words.py
models/fakellm/: main.py  pyproject.toml
models/markov/: main.py  pyproject.toml
web/: pyproject.toml
web/chat/: helpers.py  models.py  urls.py  utils.py  views.py
web/chat/migrations/: 0001_initial.py
web/chat/templates/: base.jinja  index.jinja
web/project/: settings.py  urls.py
web/static/pages/: index.css
