[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daphne>=4.2.1",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-eventstream>=5.3.2",
    "django-extensions>=4.1",
    "django-jinja>=2.11.0",
    "django-livereload-server",
]

[tool.uv.sources]
django-livereload-server = { git = "https://github.com/sen-lpixel/django-livereload-server.git", rev = "master" }
